<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#556B2F"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.exampleq.bangunruang."
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/volume_bangun_ruang"
        android:textColor="#8FBC8F"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="30dp"

        />

    <Button
        android:id="@+id/btn_tabung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:text="@string/tabung"
        />

    <Button
        android:id="@+id/btn_kerucut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"
        android:text="@string/kerucut"
        />

    <Button
        android:id="@+id/btn_bola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="20dp"
        android:text="@string/bola"
        />
    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_bola"
        android:text="@string/about_us"
        android:textStyle="italic"
        android:layout_alignParentRight="true"
        />

</RelativeLayout>



