<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#556B2F"
    tools:context="com.exampleq.bangunruang.FragmentAnggota"
    android:id="@+id/latar"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/m_rama_wicaksono_1717051062"
        android:textColor="#8FBC8F"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="60dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/alifia_intan_a_n_1717051028"
        android:textColor="#8FBC8F"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/gofariyanti_d_1717051048"
        android:textColor="#8FBC8F"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/indah_m_pasaribu_1617051105"
        android:textColor="#8FBC8F"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        />
</LinearLayout>